# c2taco

./: .gitignore  .gitmodules  README.md  build_code_analyses.sh  c2taco.py  candidate.py  check.py  io_handler.py  main.py  requirements.txt  synthesizer.py
benchmarks/artificial/: 10_taco.c  10_taco_io.json  1_taco.c  1_taco_io.json  2_taco.c  2_taco_io.json  3_taco_io.json  4_taco.c  4_taco_io.json  5_taco.c  5_taco_io.json  6_taco.c  6_taco_io.json  7_taco.c  7_taco_io.json  8_taco.c  8_taco_io.json  9_taco.c  9_taco_io.json  add.c  add_array.c  add_array_io.json  add_io.json  alpha.c  alpha_io.json  array_prod_scalar.c  array_prod_scalar_io.json  div.c  div_io.json  gemm.c  gemm_io.json
benchmarks/real/blas/: dot.c  dot_io.json  gemv.c  gemv_io.json  ger.c  ger_io.json
benchmarks/real/darknet/: gemm_nn.c  gemm_nn_io.json  gemm_nt.c  gemm_nt_io.json  gemm_tn.c  gemm_tn_io.json  gemm_tt.c  gemm_tt_io.json  mag_array.c  mag_array_io.json  matrix_add_matrix.c  matrix_add_matrix_io.json  mse_array.c  mult_add_into_cpu.c  mult_add_into_cpu_io.json  ol_l2_cpu1.c  ol_l2_cpu1_io.json  ol_l2_cpu2.c  ol_l2_cpu2_io.json  scale_array.c  scale_array_io.json  scale_matrix.c  scale_matrix_io.json  sum_array.c  sum_array_io.json  translate_array.c  translate_array_io.json
code_analysis/: code_analysis.cpp  code_analysis.h
code_analysis/operators/: CMakeLists.txt  operator_analysis.cpp  operators_analysis.cpp
code_analysis/program_length/: CMakeLists.txt  program_length.cpp
code_analysis/tensor_orders/: CMakeLists.txt  tensor_orders.cpp
docker/: Dockerfile  Dockerfile.x86
io_gen/: README.md  create_driver.py  io_gen.c  io_gen.py
synthesis/: candidate.py  io_handler.py  synthesizer.py
(+87 files in other folders)
